test/tests/errors/error-array-access-with-non-int.sm
// true
// false
// false
/**/
/**/

program {
    array x[0:4]: int;
    x["a"] = 1;
}